/*
 * @Author: kamalyes 501893067@qq.com
 * @Date: 2025-11-12 00:00:00
 * @LastEditors: kamalyes 501893067@qq.com
 * @LastEditTime: 2025-11-12 00:00:00
 * @FilePath: \go-rpc-gateway\examples\02-ecommerce-service\main.go
 * @Description: ç”µå•†å¾®æœåŠ¡ç¤ºä¾‹ - ä½¿ç”¨ç°æœ‰çš„è®¿é—®æ§åˆ¶æœåŠ¡API
 *
 * Copyright (c) 2024 by kamalyes, All Rights Reserved.
 */

package main

import (
	"context"
	"fmt"
	"time"

	gateway "github.com/kamalyes/go-rpc-gateway"
	"github.com/kamalyes/go-core/pkg/global"
	"github.com/kamalyes/go-rpc-gateway/config"
	pb "github.com/kamalyes/go-rpc-gateway/examples/02-ecommerce-service/api"
	"google.golang.org/grpc"
	"google.golang.org/grpc/health"
	healthpb "google.golang.org/grpc/health/grpc_health_v1"
	"google.golang.org/protobuf/types/known/structpb"
	"google.golang.org/protobuf/types/known/timestamppb"
)

const (
	ServiceName    = "ecommerce-service"
	ServiceVersion = "1.0.0"
)

// EcommerceService ç”µå•†æœåŠ¡å®ç° - åŸºäºè®¿é—®æ§åˆ¶æœåŠ¡çš„APIç»“æ„
type EcommerceService struct {
	pb.UnimplementedAccessControlServiceServer
	healthServer *health.Server
}

// HealthService å¥åº·æ£€æŸ¥æœåŠ¡
type HealthService struct {
	healthpb.UnimplementedHealthServer
}

func main() {
	// åˆå§‹åŒ–é…ç½®
	cfg := &config.GatewayConfig{
		Name:     ServiceName,
		Version:  ServiceVersion,
		HTTPPort: 8080,
		GRPCPort: 9090,
	}

	// åˆ›å»ºç½‘å…³
	gw, err := gateway.New(cfg)
	if err != nil {
		panic(fmt.Sprintf("åˆ›å»ºç½‘å…³å¤±è´¥: %v", err))
	}

	// åˆ›å»ºæœåŠ¡å®ä¾‹
	ecommerceSvc := &EcommerceService{
		healthServer: health.NewServer(),
	}
	healthSvc := &HealthService{}

	// æ³¨å†Œ gRPC æœåŠ¡
	gw.RegisterService(func(s *grpc.Server) {
		// æ³¨å†Œç”µå•†æœåŠ¡ï¼ˆä½¿ç”¨è®¿é—®æ§åˆ¶æœåŠ¡çš„APIç»“æ„ï¼‰
		pb.RegisterAccessControlServiceServer(s, ecommerceSvc)
		
		// æ³¨å†Œå¥åº·æ£€æŸ¥æœåŠ¡
		healthpb.RegisterHealthServer(s, healthSvc)
		
		// è®¾ç½®æœåŠ¡å¥åº·çŠ¶æ€
		ecommerceSvc.healthServer.SetServingStatus("", healthpb.HealthCheckResponse_SERVING)
		ecommerceSvc.healthServer.SetServingStatus(ServiceName, healthpb.HealthCheckResponse_SERVING)
	})

	// æ³¨å†Œ HTTP è·¯ç”± - ä½¿ç”¨è®¿é—®æ§åˆ¶APIçš„è·¯ç”±ç»“æ„ä½œä¸ºç¤ºä¾‹
	gw.RegisterHTTPRoute("/api/v1/products", "GET", func(ctx *gateway.Context) {
		// æ¨¡æ‹Ÿå•†å“åˆ—è¡¨
		products := []map[string]interface{}{
			{
				"id":          1,
				"name":        "iPhone 15 Pro",
				"description": "æœ€æ–°æ¬¾è‹¹æœæ‰‹æœº",
				"price":       9999.00,
				"stock":       100,
				"category":    "æ‰‹æœº",
			},
			{
				"id":          2,
				"name":        "MacBook Pro 16\"",
				"description": "é«˜æ€§èƒ½ç¬”è®°æœ¬ç”µè„‘",
				"price":       25999.00,
				"stock":       50,
				"category":    "ç”µè„‘",
			},
		}

		ctx.JSON(200, map[string]interface{}{
			"code":    0,
			"message": "success",
			"data": map[string]interface{}{
				"products": products,
				"total":    len(products),
			},
		})
	})

	gw.RegisterHTTPRoute("/api/v1/orders", "POST", func(ctx *gateway.Context) {
		// æ¨¡æ‹Ÿè®¢å•åˆ›å»º
		order := map[string]interface{}{
			"id":           12345,
			"order_no":     fmt.Sprintf("ORDER%d", time.Now().Unix()),
			"user_id":      ctx.GetString("user_id"),
			"status":       "pending",
			"total_amount": 9999.00,
			"created_at":   time.Now().Format(time.RFC3339),
		}

		ctx.JSON(200, map[string]interface{}{
			"code":    0,
			"message": "è®¢å•åˆ›å»ºæˆåŠŸ",
			"data":    order,
		})
	})

	// å¯ç”¨åŠŸèƒ½ç‰¹æ€§
	gw.EnablePProf()      // æ€§èƒ½åˆ†æ
	gw.EnableMonitoring() // ç›‘æ§æŒ‡æ ‡
	gw.EnableTracing()    // é“¾è·¯è¿½è¸ª
	gw.EnableHealth()     // å¥åº·æ£€æŸ¥

	// å¯åŠ¨æœåŠ¡
	global.LOGGER.InfoMsg("ğŸš€ å¯åŠ¨ç”µå•†å¾®æœåŠ¡...")
	global.LOGGER.InfoKV("æœåŠ¡ä¿¡æ¯",
		"name", ServiceName,
		"version", ServiceVersion,
		"http_port", 8080,
		"grpc_port", 9090,
	)

	global.LOGGER.InfoMsg("ğŸ“‹ å·²æ³¨å†Œçš„æœåŠ¡:")
	global.LOGGER.InfoMsg("  - AccessControlService (åŸºäºç°æœ‰API)")
	global.LOGGER.InfoMsg("  - HealthService (å¥åº·æ£€æŸ¥)")
	
	global.LOGGER.InfoMsg("ğŸ”— HTTP APIè·¯ç”±:")
	global.LOGGER.InfoMsg("  - GET  /api/v1/products (è·å–å•†å“åˆ—è¡¨)")
	global.LOGGER.InfoMsg("  - POST /api/v1/orders (åˆ›å»ºè®¢å•)")

	if err := gw.Start(); err != nil {
		panic(fmt.Sprintf("å¯åŠ¨å¤±è´¥: %v", err))
	}
}

// HealthService å®ç°

func (h *HealthService) Check(ctx context.Context, req *healthpb.HealthCheckRequest) (*healthpb.HealthCheckResponse, error) {
	global.LOGGER.InfoKV("å¥åº·æ£€æŸ¥", "service", req.Service)
	
	return &healthpb.HealthCheckResponse{
		Status: healthpb.HealthCheckResponse_SERVING,
	}, nil
}

func (h *HealthService) Watch(req *healthpb.HealthCheckRequest, stream healthpb.Health_WatchServer) error {
	global.LOGGER.InfoKV("ç›‘å¬å¥åº·çŠ¶æ€", "service", req.Service)
	
	// å®šæœŸå‘é€å¥åº·çŠ¶æ€
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-stream.Context().Done():
			return nil
		case <-ticker.C:
			if err := stream.Send(&healthpb.HealthCheckResponse{
				Status: healthpb.HealthCheckResponse_SERVING,
			}); err != nil {
				return err
			}
		}
	}
}

// EcommerceService å®ç° - åŸºäºè®¿é—®æ§åˆ¶æœåŠ¡APIçš„ç¤ºä¾‹å®ç°

func (s *EcommerceService) UserInfo(ctx context.Context, req *pb.UserInfoRequest) (*pb.UserInfoResponse, error) {
	global.LOGGER.InfoKV("è·å–ç”¨æˆ·ä¿¡æ¯", "request", req)

	// æ¨¡æ‹Ÿç”¨æˆ·ä¿¡æ¯
	user := &pb.User{
		UserId:      1001,
		Username:    "demo_user",
		Nickname:    "æ¼”ç¤ºç”¨æˆ·",
		Email:       "demo@example.com",
		Phone:       "13800138000",
		Status:      pb.Status_STAT_NORMAL,
		CreatedTime: timestamppb.New(time.Now().Add(-30*24*time.Hour)), // 30å¤©å‰åˆ›å»º
		UpdatedTime: timestamppb.New(time.Now()),
	}

	return &pb.UserInfoResponse{
		Code:    0,
		Message: "è·å–ç”¨æˆ·ä¿¡æ¯æˆåŠŸ",
		Data:    user,
	}, nil
}

func (s *EcommerceService) UserList(ctx context.Context, req *pb.UserListRequest) (*pb.UserListResponse, error) {
	global.LOGGER.InfoKV("è·å–ç”¨æˆ·åˆ—è¡¨", 
		"page", req.Page,
		"page_size", req.PageSize,
	)

	// æ¨¡æ‹Ÿç”¨æˆ·åˆ—è¡¨æ•°æ®
	users := []*pb.User{
		{
			UserId:      1001,
			Username:    "user1",
			Nickname:    "ç”¨æˆ·1",
			Email:       "user1@example.com",
			Phone:       "13800138001",
			Status:      pb.Status_STAT_NORMAL,
			CreatedTime: timestamppb.New(time.Now().Add(-30*24*time.Hour)),
			UpdatedTime: timestamppb.New(time.Now()),
		},
		{
			UserId:      1002,
			Username:    "user2",
			Nickname:    "ç”¨æˆ·2",
			Email:       "user2@example.com", 
			Phone:       "13800138002",
			Status:      pb.Status_STAT_NORMAL,
			CreatedTime: timestamppb.New(time.Now().Add(-25*24*time.Hour)),
			UpdatedTime: timestamppb.New(time.Now()),
		},
	}

	// è®¡ç®—åˆ†é¡µ
	total := int64(len(users))
	page := req.Page
	if page <= 0 {
		page = 1
	}
	pageSize := req.PageSize
	if pageSize <= 0 {
		pageSize = 10
	}

	return &pb.UserListResponse{
		Code:    0,
		Message: "è·å–ç”¨æˆ·åˆ—è¡¨æˆåŠŸ",
		Data: &pb.UserListData{
			List:     users,
			Total:    total,
			Page:     page,
			PageSize: pageSize,
		},
	}, nil
}

func (s *EcommerceService) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
	global.LOGGER.InfoKV("ç”¨æˆ·ç™»å½•", 
		"username", req.Username,
		"login_type", req.LoginType,
	)

	// æ¨¡æ‹Ÿç™»å½•éªŒè¯
	if req.Username == "" || req.Password == "" {
		return &pb.LoginResponse{
			Code:    400,
			Message: "ç”¨æˆ·åå’Œå¯†ç ä¸èƒ½ä¸ºç©º",
		}, nil
	}

	// æ¨¡æ‹ŸæˆåŠŸç™»å½•
	loginData := &pb.LoginData{
		Token: fmt.Sprintf("demo_token_%d", time.Now().Unix()),
		User: &pb.User{
			UserId:      1001,
			Username:    req.Username,
			Nickname:    "æ¼”ç¤ºç”¨æˆ·",
			Email:       "demo@example.com",
			Phone:       "13800138000",
			Status:      pb.Status_STAT_NORMAL,
			CreatedTime: timestamppb.New(time.Now().Add(-30*24*time.Hour)),
			UpdatedTime: timestamppb.New(time.Now()),
		},
	}

	return &pb.LoginResponse{
		Code:    0,
		Message: "ç™»å½•æˆåŠŸ",
		Data:    loginData,
	}, nil
}

func (s *EcommerceService) Logout(ctx context.Context, req *pb.LogoutRequest) (*pb.LogoutResponse, error) {
	global.LOGGER.InfoKV("ç”¨æˆ·ç™»å‡º", "token", req.Token)

	return &pb.LogoutResponse{
		Code:    0,
		Message: "ç™»å‡ºæˆåŠŸ",
	}, nil
}

func (s *EcommerceService) Endpoints(ctx context.Context, req *pb.EndpointsRequest) (*pb.EndpointsResponse, error) {
	global.LOGGER.InfoKV("è·å–ç«¯ç‚¹ä¿¡æ¯", "request", req)

	// æ¨¡æ‹ŸAPIç«¯ç‚¹ä¿¡æ¯
	endpoints := []*structpb.Struct{
		{
			Fields: map[string]*structpb.Value{
				"path":        structpb.NewStringValue("/api/v1/products"),
				"method":      structpb.NewStringValue("GET"),
				"description": structpb.NewStringValue("è·å–å•†å“åˆ—è¡¨"),
			},
		},
		{
			Fields: map[string]*structpb.Value{
				"path":        structpb.NewStringValue("/api/v1/orders"),
				"method":      structpb.NewStringValue("POST"),
				"description": structpb.NewStringValue("åˆ›å»ºè®¢å•"),
			},
		},
	}

	return &pb.EndpointsResponse{
		Code:    0,
		Message: "è·å–ç«¯ç‚¹ä¿¡æ¯æˆåŠŸ",
		Data:    endpoints,
	}, nil
}

// å…¶ä»–å¿…éœ€çš„æ–¹æ³•å®ç°ï¼ˆè¿”å›æœªå®ç°é”™è¯¯æˆ–ç©ºå®ç°ï¼‰

func (s *EcommerceService) DictNew(ctx context.Context, req *pb.DictNewRequest) (*pb.DictNewResponse, error) {
	return &pb.DictNewResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) DictList(ctx context.Context, req *pb.DictListRequest) (*pb.DictListResponse, error) {
	return &pb.DictListResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) DictGet(ctx context.Context, req *pb.DictGetRequest) (*pb.DictGetResponse, error) {
	return &pb.DictGetResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) DictUpdate(ctx context.Context, req *pb.DictUpdateRequest) (*pb.DictUpdateResponse, error) {
	return &pb.DictUpdateResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) DictDelete(ctx context.Context, req *pb.DictDeleteRequest) (*pb.DictDeleteResponse, error) {
	return &pb.DictDeleteResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) OplogNew(ctx context.Context, req *pb.OplogNewRequest) (*pb.OplogNewResponse, error) {
	return &pb.OplogNewResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) OplogList(ctx context.Context, req *pb.OplogListRequest) (*pb.OplogListResponse, error) {
	return &pb.OplogListResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) OplogGet(ctx context.Context, req *pb.OplogGetRequest) (*pb.OplogGetResponse, error) {
	return &pb.OplogGetResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) OplogDelete(ctx context.Context, req *pb.OplogDeleteRequest) (*pb.OplogDeleteResponse, error) {
	return &pb.OplogDeleteResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) BucketList(ctx context.Context, req *pb.BucketListRequest) (*pb.BucketListResponse, error) {
	return &pb.BucketListResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) BucketNew(ctx context.Context, req *pb.BucketNewRequest) (*pb.BucketNewResponse, error) {
	return &pb.BucketNewResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) BucketDelete(ctx context.Context, req *pb.BucketDeleteRequest) (*pb.BucketDeleteResponse, error) {
	return &pb.BucketDeleteResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) ObjectList(ctx context.Context, req *pb.ObjectListRequest) (*pb.ObjectListResponse, error) {
	return &pb.ObjectListResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) ObjectGet(ctx context.Context, req *pb.ObjectGetRequest) (*pb.ObjectGetResponse, error) {
	return &pb.ObjectGetResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) ObjectPut(ctx context.Context, req *pb.ObjectPutRequest) (*pb.ObjectPutResponse, error) {
	return &pb.ObjectPutResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) ObjectDelete(ctx context.Context, req *pb.ObjectDeleteRequest) (*pb.ObjectDeleteResponse, error) {
	return &pb.ObjectDeleteResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) ObjectPresignedDownloadUrl(ctx context.Context, req *pb.ObjectPresignedDownloadUrlRequest) (*pb.ObjectPresignedDownloadUrlResponse, error) {
	return &pb.ObjectPresignedDownloadUrlResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) ObjectPresignedUploadUrl(ctx context.Context, req *pb.ObjectPresignedUploadUrlRequest) (*pb.ObjectPresignedUploadUrlResponse, error) {
	return &pb.ObjectPresignedUploadUrlResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) Install(ctx context.Context, req *pb.InstallRequest) (*pb.InstallResponse, error) {
	return &pb.InstallResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) SendCode(ctx context.Context, req *pb.SendCodeRequest) (*pb.SendCodeResponse, error) {
	return &pb.SendCodeResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) RegisterCheck(ctx context.Context, req *pb.RegisterCheckRequest) (*pb.RegisterCheckResponse, error) {
	return &pb.RegisterCheckResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) Register(ctx context.Context, req *pb.RegisterRequest) (*pb.RegisterResponse, error) {
	return &pb.RegisterResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) RefreshToken(ctx context.Context, req *pb.RefreshTokenRequest) (*pb.RefreshTokenResponse, error) {
	return &pb.RefreshTokenResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) Authorities(ctx context.Context, req *pb.AuthoritiesRequest) (*pb.AuthoritiesResponse, error) {
	return &pb.AuthoritiesResponse{Code: 501, Message: "Not implemented"}, nil
}

func (s *EcommerceService) UserMenusTree(ctx context.Context, req *pb.UserMenusTreeRequest) (*pb.UserMenusTreeResponse, error) {
	return &pb.UserMenusTreeResponse{Code: 501, Message: "Not implemented"}, nil
}